--- a/index.html
+++ b/index.html
@@ -138,19 +138,15 @@
       <div class="about__container container grid">
         <!-- <img src="packages/images/pras-2.jpeg" alt="" class="about__img"> -->
         <p class="about__description">
-          Sebagai seorang Full Stack Web Developer, saya memiliki keahlian
-          komprehensif dalam mengembangkan aplikasi web, menguasai teknologi
-          front-end seperti HTML, CSS, dan JavaScript. Di sisi back-end, saya
-          mahir dalam menggunakan bahasa pemrograman seperti PHP dan Python,
-          serta basis data relasional seperti MySQL, SQLite, dan MariaDB.
+          As a Full Stack Web Developer, I possess comprehensive skills in developing web applications, mastering
+          front-end technologies such as HTML, CSS, and JavaScript. On the back-end side, I am proficient in using
+          programming languages such as PHP and Python, as well as relational databases like MySQL, SQLite, and MariaDB.
         </p>
         <p class="about__description">
-          Kemampuan saya mencakup pengembangan antarmuka pengguna yang
-          responsif, manajemen server, dan implementasi API yang efisien. Saya
-          juga memiliki pengalaman dalam penggunaan alat pengembangan seperti
-          Git. Kombinasi keterampilan teknis dan kemampuan interpersonal
-          membuat saya siap untuk berkolaborasi dalam pengembangan aplikasi
-          web yang inovatif dan berkualitas tinggi.
+          My capabilities include responsive user interface development, server management, and efficient API
+          implementation. I also have experience using development tools such as Git. The combination of technical
+          skills and interpersonal abilities makes me ready to collaborate on innovative and high-quality web
+          application development.
         </p>
         <!-- <div class="about__data">
                         <div class="about__info">
@@ -451,139 +447,6 @@
       </div>
     </section>
 
-    <!--==================== SERVICES ====================-->
-    <!-- <section class="services section" id="services">
-            <h2 class="section__title">Services</h2>
-            <span class="section__subtitle">What I offer</span>
-
-            <div class="services__container container grid">
-                ==================== SERVICES 1 ====================
-                <div class="services__content">
-                    <div>
-                        <i class="uil uil-analytics skills__icon"></i>
-                        <h3 class="services__title">Data Analyst<br></h3>
-                    </div>
-                    <span class="button button--flex button--small button--link services__button">
-                        View more
-                        <i class="uil uil-arrow-right button__icon"></i>
-                    </span>
-
-                    <div class="services__modal">
-                        <div class="services__modal-content">
-                            <h4 class="services__modal-title">Data Analyst <br></h4>
-                            <i class="uil uil-times services__modal-close"></i>
-
-                            <ul class="services__modal-services grid">
-                                <li class="services__modal-service">
-                                    <i class="uil uil-check-circle services__modal-icon"></i>
-                                    <p>I analize data systems.</p>
-                                </li>
-
-                                <li class="services__modal-service">
-                                    <i class="uil uil-check-circle services__modal-icon"></i>
-                                    <p>Automating information retrieval.</p>
-                                </li>
-
-                                <li class="services__modal-service">
-                                    <i class="uil uil-check-circle services__modal-icon"></i>
-                                    <p>Systematically applying statistical and logical techniques.</p>
-                                </li>
-
-                                <li class="services__modal-service">
-                                    <i class="uil uil-check-circle services__modal-icon"></i>
-                                    <p>Visualizing graphs, charts and preparing reports and dashboards.</p>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-
-                ==================== SERVICES 2 ====================
-                <div class="services__content">
-                    <div>
-                        <i class="uil uil-money-bill skills__icon"></i>
-                        <h3 class="services__title">Banker<br> </h3>
-                    </div>
-                    <span class="button button--flex button--small button--link services__button">
-                        View more
-                        <i class="uil uil-arrow-right button__icon"></i>
-                    </span>
-
-                    <div class="services__modal">
-                        <div class="services__modal-content">
-                            <h4 class="services__modal-title">Banker<br></h4>
-                            <i class="uil uil-times services__modal-close"></i>
-
-                            <ul class="services__modal-services grid">
-                                <li class="services__modal-service">
-                                    <i class="uil uil-check-circle services__modal-icon"></i>
-                                    <p>Assiting both personal and commercial clients with financial questions and needs.
-                                    </p>
-                                </li>
-
-                                <li class="services__modal-service">
-                                    <i class="uil uil-check-circle services__modal-icon"></i>
-                                    <p>Maintain customer acoounts and help resolve disputes.</p>
-                                </li>
-
-                                <li class="services__modal-service">
-                                    <i class="uil uil-check-circle services__modal-icon"></i>
-                                    <p>Refer customers to loan officers or other financial specialist.</p>
-                                </li>
-
-                                <li class="services__modal-service">
-                                    <i class="uil uil-check-circle services__modal-icon"></i>
-                                    <p>Systematically applying statistical and logical techniques.</p>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-
-                ==================== SERVICES 3 ====================
-                <div class="services__content">
-                    <div>
-                        <i class="uil uil-arrow services__icon"></i>
-                        <h3 class="services__title">Web Developer<br></h3>
-                    </div>
-                    <span class="button button--flex button--small button--link services__button">
-                        View more
-                        <i class="uil uil-arrow-right button__icon"></i>
-                    </span>
-
-                    <div class="services__modal">
-                        <div class="services__modal-content">
-                            <h4 class="services__modal-title">Web Developer<br></h4>
-                            <i class="uil uil-times services__modal-close"></i>
-
-                            <ul class="services__modal-services grid">
-                                <li class="services__modal-service">
-                                    <i class="uil uil-check-circle services__modal-icon"></i>
-                                    <p>I develop the user interface.</p>
-                                </li>
-
-                                <li class="services__modal-service">
-                                    <i class="uil uil-check-circle services__modal-icon"></i>
-                                    <p>Webpage development.</p>
-                                </li>
-
-                                <li class="services__modal-service">
-                                    <i class="uil uil-check-circle services__modal-icon"></i>
-                                    <p>I create Ux element interactions.</p>
-                                </li>
-
-                                <li class="services__modal-service">
-                                    <i class="uil uil-check-circle services__modal-icon"></i>
-                                    <p>Well trained in WordPress.</p>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-
-
-            </div>
-        </section> -->
     <!--==================== PORTFOLIO ====================-->
     <section class="portfolio section" id="portfolio">
       <h2 class="section__title">Portfolio</h2>
@@ -598,21 +461,17 @@
 
             <div class="portfolio_">
               <h3 class="portfolio__title">
-                Sistem Informasi dan Manajemen Pendaftaran Siswa Baru
+                New Student Registration Information and Management System
               </h3>
               <p class="portfolio__description">
-                Aplikasi Sistem Informasi dan Manajemen Pendaftaran Siswa Baru
-                merupakan solusi digital yang mempermudah proses penerimaan
-                siswa di lembaga pendidikan. Dengan fitur pendaftaran online,
-                pengelolaan dokumen digital, sistem verifikasi otomatis, dan
-                manajemen kapasitas, aplikasi ini membantu lembaga mengelola
-                pendaftaran dengan efisien. Pemberitahuan otomatis dan sistem
-                pelacakan memudahkan komunikasi antara pihak lembaga dan calon
-                siswa, sementara keamanan data yang kuat menjamin perlindungan
-                informasi sensitif. Dengan demikian, aplikasi ini tidak hanya
-                meningkatkan efektivitas administratif, tetapi juga memberikan
-                pengalaman pendaftaran yang lebih transparan dan nyaman bagi
-                semua pihak yang terlibat.
+                The New Student Registration Information and Management System is a digital solution that simplifies the
+                student admission process in educational institutions. With features such as online registration,
+                digital document management, automatic verification systems, and capacity management, this application
+                helps institutions efficiently manage admissions. Automatic notifications and tracking systems
+                facilitate communication between the institution and prospective students, while strong data security
+                ensures the protection of sensitive information. Thus, this application not only enhances administrative
+                effectiveness but also provides a more transparent and convenient registration experience for all
+                parties involved.
               </p>
               <a href="https://sipintardisdiktanjabtim.my.id/"
                 class="button button--flex button--small portfolio__button">
@@ -629,15 +488,15 @@
 
             <div class="portfolio_">
               <h3 class="portfolio__title">
-                e-Presensi Kab. Tanjung Jabung Timur
+                e-Presensi Tanjung Jabung Timur
               </h3>
               <p class="portfolio__description">
-                Aplikasi e-Presensi Kab. Tanjung Jabung Timur adalah solusi absensi canggih berbasis web untuk ASN.
-                Dikelola dengan sistem web, aplikasi ini mendukung input kehadiran melalui mesin Fingerspot atau
-                perangkat Android. Dengan 4,042 pengguna aktif, sistem ini telah menjadi tulang punggung pencatatan
-                kehadiran setiap hari kerja sejak tahun 2022. Keandalannya membuatnya menjadi instrumen esensial dalam
-                manajemen absensi, memberikan efisiensi dan akurasi yang tinggi bagi para pengguna di Kabupaten
-                Tanjung Jabung Timur. <strong>(Tim Pengembang)</strong>
+                The e-Presensi Tanjung Jabung Timur is an advanced web-based attendance solution
+                for civil servants. Managed through a web system, this application supports attendance input through
+                Fingerspot machines or Android devices. With 4,042 active users, this system has been the backbone of
+                daily attendance recording since 2022. Its reliability makes it an essential tool in attendance
+                management, providing high efficiency and accuracy for users in East Tanjung Jabung Regency.
+                <strong>(Development Team)</strong>
               </p>
               <a href="https://presensi.tanjabtimkab.go.id/"
                 class="button button--flex button--small portfolio__button">
@@ -654,15 +513,16 @@
 
             <div class="portfolio_">
               <h3 class="portfolio__title">
-                Android e-Presensi Kab. Tanjung Jabung Timur
+                Android e-Presensi Tanjung Jabung Timur
               </h3>
               <p class="portfolio__description">
-                Aplikasi e-Presensi versi Android menawarkan kemudahan input absen yang cepat dan efisien. Pengguna
-                dapat dengan mudah melihat rekapitulasi kehadiran pribadi mereka. Keamanan diperkuat dengan persyaratan
-                berada dalam radius kantor instansi masing-masing, memastikan akurasi lokasi dan kehadiran. Fitur ini
-                tidak hanya memberikan kenyamanan dalam pencatatan absensi, tetapi juga meningkatkan keamanan dan
-                integritas data. Dengan antarmuka yang ramah pengguna, aplikasi Android ini memberikan pengalaman yang
-                lancar untuk memenuhi kebutuhan ASN di Kabupaten Tanjung Jabung Timur. <strong>(Tim Pengembang)</strong>
+                The Android version of the e-Presensi Tanjung Jabung Timur Application offers quick and efficient
+                attendance input. Users can easily view summaries of their personal attendance. Security is reinforced
+                by the requirement to be within a radius of their respective office premises, ensuring location and
+                attendance accuracy. This
+                feature not only provides convenience in attendance recording but also enhances data security and
+                integrity. With a user-friendly interface, this Android application provides a smooth experience to meet
+                the needs of civil servants in East Tanjung Jabung Regency. <strong>(Development Team)</strong>
               </p>
               <a href="https://play.google.com/store/apps/details?id=com.tanjabtimkab.presensi"
                 class="button button--flex button--small portfolio__button">
@@ -679,21 +539,15 @@
 
             <div class="portfolio_">
               <h3 class="portfolio__title">
-                Deteksi Tumor Otak Menggunakan Modification Lu-Net Berbasis
-                Citra MRI
+                Brain Tumor Detection Using Modification Lu-Net Based on MRI Images
               </h3>
               <p class="portfolio__description">
-                Aplikasi deteksi tumor otak berbasis Python menggunakan
-                modifikasi algoritma Lu-Net, memberikan keakuratan tinggi
-                dalam identifikasi dan segmentasi lesi. Dengan antarmuka yang
-                intuitif, pengguna dapat mengunggah citra medis, dan aplikasi
-                secara cepat menganalisisnya untuk mendeteksi potensi tumor
-                otak. Teknologi Lu-Net yang disesuaikan memastikan deteksi
-                tepat dan pemetaan yang akurat, mendukung langkah-langkah
-                selanjutnya dalam diagnosis dan perencanaan pengobatan. Solusi
-                inovatif ini tidak hanya efisien dalam deteksi dini tetapi
-                juga memberikan kontribusi signifikan dalam pengembangan
-                teknologi di bidang kesehatan.
+                A Python-based brain tumor detection application using a modified Lu-Net algorithm provides high
+                accuracy in lesion identification and segmentation. With an intuitive interface, users can upload
+                medical images, and the application quickly analyzes them to detect potential brain tumors. Customized
+                Lu-Net technology ensures precise detection and accurate mapping, supporting further steps in diagnosis
+                and treatment planning. This innovative solution is not only efficient in early detection but also
+                significantly contributes to the development of technology in the healthcare field.
               </p>
               <!-- <a
                   href="#"
