--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
   <!--==================== CSS ====================-->
   <link rel="stylesheet" href="./packages/css/styles.css" />
 
-  <title>Ahmad fayyadh Q.H</title>
+  <title>Ahmad Fayyadh Q.H</title>
 </head>
 
 <body>
   <!--==================== HEADER ====================-->
   <header class="header" id="header">
     <nav class="nav container">
-      <a href="#" class="nav__logo">Ahmad fayyadh Qaimul Haq</a>
+      <a href="#" class="nav__logo">Ahmad Fayyadh Qaimul Haq</a>
       <div class="nav__menu" id="nav-menu">
         <ul class="nav__list grid">
           <li class="nav__item">
@@ -137,12 +137,12 @@
 
       <div class="about__container container grid">
         <!-- <img src="packages/images/pras-2.jpeg" alt="" class="about__img"> -->
-        <p class="about__description">
+        <p class="about__description" style="text-align: justify;">
           As a Full Stack Web Developer, I possess comprehensive skills in developing web applications, mastering
           front-end technologies such as HTML, CSS, and JavaScript. On the back-end side, I am proficient in using
           programming languages such as PHP and Python, as well as relational databases like MySQL, SQLite, and MariaDB.
         </p>
-        <p class="about__description">
+        <p class="about__description" style="text-align: justify;">
           My capabilities include responsive user interface development, server management, and efficient API
           implementation. I also have experience using development tools such as Git. The combination of technical
           skills and interpersonal abilities makes me ready to collaborate on innovative and high-quality web
@@ -463,7 +463,7 @@
               <h3 class="portfolio__title">
                 New Student Registration Information and Management System
               </h3>
-              <p class="portfolio__description">
+              <p class="portfolio__description" style="text-align: justify;">
                 The New Student Registration Information and Management System is a digital solution that simplifies the
                 student admission process in educational institutions. With features such as online registration,
                 digital document management, automatic verification systems, and capacity management, this application
@@ -490,7 +490,7 @@
               <h3 class="portfolio__title">
                 e-Presensi Tanjung Jabung Timur
               </h3>
-              <p class="portfolio__description">
+              <p class="portfolio__description" style="text-align: justify;">
                 The e-Presensi Tanjung Jabung Timur is an advanced web-based attendance solution
                 for civil servants. Managed through a web system, this application supports attendance input through
                 Fingerspot machines or Android devices. With 4,042 active users, this system has been the backbone of
@@ -515,7 +515,7 @@
               <h3 class="portfolio__title">
                 Android e-Presensi Tanjung Jabung Timur
               </h3>
-              <p class="portfolio__description">
+              <p class="portfolio__description" style="text-align: justify;">
                 The Android version of the e-Presensi Tanjung Jabung Timur Application offers quick and efficient
                 attendance input. Users can easily view summaries of their personal attendance. Security is reinforced
                 by the requirement to be within a radius of their respective office premises, ensuring location and
@@ -541,7 +541,7 @@
               <h3 class="portfolio__title">
                 Brain Tumor Detection Using Modification Lu-Net Based on MRI Images
               </h3>
-              <p class="portfolio__description">
+              <p class="portfolio__description" style="text-align: justify;">
                 A Python-based brain tumor detection application using a modified Lu-Net algorithm provides high
                 accuracy in lesion identification and segmentation. With an intuitive interface, users can upload
                 medical images, and the application quickly analyzes them to detect potential brain tumors. Customized
