--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                      -->
         <div class="about__data">
           <div class="about__buttons">
-            <a download="" href="packages/pdf/Ahmad Fayyadh Qaimul Haq _ Cake.pdf" class="button button--flex">
+            <a download="" href="packages/pdf/ahmadfayyadh.pdf" class="button button--flex">
               Download CV<i class="uil uil-download-alt button__icon"></i>
             </a>
           </div>
